force-app/main/default/objects/AccountContactRelation/fields/ACR_ID_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>ACR_ID_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>ACR ID</label>
    <type>Text</type>
</CustomField>