force-app/main/default/objects/AccountContactRelation/fields/AEQCC_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>AEQCC_Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AEQCC Decision Maker</label>
    <type>Checkbox</type>
</CustomField>