force-app/main/default/objects/AccountContactRelation/fields/Agency_Weekly_Wrap__c.field-meta.xml
<CustomField>
    <fullName>Agency_Weekly_Wrap__c</fullName>
    <label>Agency Weekly Wrap</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscribed</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>