force-app/main/default/objects/AccountContactRelation/fields/AQ_Account_Nominee_Air_Traveller_Status__c.field-meta.xml
<CustomField>
    <fullName>AQ_Account_Nominee_Air_Traveller_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Nominee Air Traveller Status</label>
    <type>Checkbox</type>
</CustomField>