force-app/main/default/objects/AccountContactRelation/fields/AQ_Account_Nominee_customer_Id__c.field-meta.xml
<CustomField>
    <fullName>AQ_Account_Nominee_customer_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Nominee customer Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>