force-app/main/default/objects/AccountContactRelation/fields/AQ_Account_Nominee_User_Flag__c.field-meta.xml
<CustomField>
    <fullName>AQ_Account_Nominee_User_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Nominee User Flag</label>
    <type>Checkbox</type>
</CustomField>