force-app/main/default/objects/AccountContactRelation/fields/AQ_Airline_News_and_Promotions__c.field-meta.xml
<CustomField>
    <fullName>AQ_Airline_News_and_Promotions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Airline News and Promotions</label>
    <type>Checkbox</type>
</CustomField>