force-app/main/default/objects/AccountContactRelation/fields/AQ_Email__c.field-meta.xml
<CustomField>
    <fullName>AQ_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>