force-app/main/default/objects/AccountContactRelation/fields/AQ_First_Name__c.field-meta.xml
<CustomField>
    <fullName>AQ_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aquire First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>