force-app/main/default/objects/AccountContactRelation/fields/AQ_Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>AQ_Frequent_Flyer_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aquire Frequent Flyer Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>