force-app/main/default/objects/AccountContactRelation/fields/AQ_Key_Travel_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>AQ_Key_Travel_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Travel Coordinator</label>
    <type>Checkbox</type>
</CustomField>