force-app/main/default/objects/AccountContactRelation/fields/AQ_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>AQ_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aquire Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>