force-app/main/default/objects/AccountContactRelation/fields/AQ_Points_Balance_Account_Information__c.field-meta.xml
<CustomField>
    <fullName>AQ_Points_Balance_Account_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Points Balance &amp; Account Information</label>
    <type>Checkbox</type>
</CustomField>