force-app/main/default/objects/AccountContactRelation/fields/AQ_Salutation__c.field-meta.xml
<CustomField>
    <fullName>AQ_Salutation__c</fullName>
    <label>Aquire Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>