force-app/main/default/objects/AccountContactRelation/fields/Assistant__c.field-meta.xml
<CustomField>
    <fullName>Assistant__c</fullName>
    <description>Name of the person&apos;s assistant</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assistant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>