force-app/main/default/objects/AccountContactRelation/fields/Assistant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Phone__c</fullName>
    <description>Contact number for the assistant</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assistant Phone</label>
    <type>Phone</type>
</CustomField>