force-app/main/default/objects/AccountContactRelation/fields/B_G_Your_Business__c.field-meta.xml
<CustomField>
    <fullName>B_G_Your_Business__c</fullName>
    <label>Your Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscribed</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>