force-app/main/default/objects/AccountContactRelation/fields/Details_on_1st_Preference__c.field-meta.xml
<CustomField>
    <fullName>Details_on_1st_Preference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Details on 1st Preference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>