force-app/main/default/objects/AccountContactRelation/fields/First_Preference__c.field-meta.xml
<CustomField>
    <fullName>First_Preference__c</fullName>
    <label>First Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Event_Categories</valueSetName>
    </valueSet>
</CustomField>