force-app/main/default/objects/AccountContactRelation/fields/Freight_ACR_Portal_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Freight_ACR_Portal_User_Id__c</fullName>
    <description>Freight - To store the business keys for ACRs coming from Tauras.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Freight ACR Portal User Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>