force-app/main/default/objects/AccountContactRelation/fields/Freight_City__c.field-meta.xml
<CustomField>
    <fullName>Freight_City__c</fullName>
    <description>Freight Implementation: To capture the city which the Contact is located in</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To capture the city which the Contact is located in</inlineHelpText>
    <label>City (Related)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>