force-app/main/default/objects/AccountContactRelation/fields/Future_Planet__c.field-meta.xml
<CustomField>
    <fullName>Future_Planet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact associated to the Future Planet corporate carbon offset program</inlineHelpText>
    <label>Future Planet</label>
    <type>Checkbox</type>
</CustomField>