force-app/main/default/objects/AccountContactRelation/fields/Key_Influencer__c.field-meta.xml
<CustomField>
    <fullName>Key_Influencer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Influencer</label>
    <type>Checkbox</type>
</CustomField>