force-app/main/default/objects/AccountContactRelation/fields/Key_Negotiator__c.field-meta.xml
<CustomField>
    <fullName>Key_Negotiator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Negotiator</label>
    <type>Checkbox</type>
</CustomField>