force-app/main/default/objects/AccountContactRelation/fields/Learning_Hub_Member__c.field-meta.xml
<CustomField>
    <fullName>Learning_Hub_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Learning Hub Member</label>
    <type>Checkbox</type>
</CustomField>