force-app/main/default/objects/AccountContactRelation/fields/Loyalty_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyalty Key Contact</label>
    <type>Checkbox</type>
</CustomField>