force-app/main/default/objects/AccountContactRelation/fields/Performance_Update__c.field-meta.xml
<CustomField>
    <fullName>Performance_Update__c</fullName>
    <description>S&amp;D to use this for performance update related business process</description>
    <label>Performance Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscribed</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>