force-app/main/default/objects/AccountContactRelation/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of QAC Manager Contacts project, It would be set from website</description>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>