force-app/main/default/objects/AccountContactRelation/fields/QBD_ABN__c.field-meta.xml
<CustomField>
    <fullName>QBD_ABN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QBD ABN#</label>
    <length>11</length>
    <type>Text</type>
</CustomField>