force-app/main/default/objects/AccountContactRelation/fields/QBD_First_Name__c.field-meta.xml
<CustomField>
    <fullName>QBD_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QBD First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>