force-app/main/default/objects/AccountContactRelation/fields/QBD_LastName__c.field-meta.xml
<CustomField>
    <fullName>QBD_LastName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QBD LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>