force-app/main/default/objects/AccountContactRelation/fields/QBD_Travel_Arranger__c.field-meta.xml
<CustomField>
    <fullName>QBD_Travel_Arranger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QBD Travel Arranger</label>
    <type>Checkbox</type>
</CustomField>