force-app/main/default/objects/AccountContactRelation/fields/QBR_Role__c.field-meta.xml
<CustomField>
    <fullName>QBR_Role__c</fullName>
    <description>This field is used to capture the role of the contact present in QBR system.</description>
    <label>QBR Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>