force-app/main/default/objects/AccountContactRelation/fields/Rate_Card_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Distribution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Freight Business related the subscription of the contact to be sent the distribution rate card related to the customer.</description>
    <inlineHelpText>Please check to ensure contact is notified when there is a Freight disruption.</inlineHelpText>
    <label>Freight Disruption Contact</label>
    <type>Checkbox</type>
</CustomField>