force-app/main/default/objects/AccountContactRelation/fields/Related_Email__c.field-meta.xml
<CustomField>
    <fullName>Related_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email (Related)</label>
    <type>Email</type>
</CustomField>