force-app/main/default/objects/AccountContactRelation/fields/Related_Phone__c.field-meta.xml
<CustomField>
    <fullName>Related_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone (Related)</label>
    <type>Phone</type>
</CustomField>