force-app/main/default/objects/AccountContactRelation/validationRules/SnD_ACR_Job_Title.validationRule-meta.xml
<ValidationRule>
    <fullName>SnD_ACR_Job_Title</fullName>
    <active>true</active>
    <description>To prompt S&amp;D Users to limit the char size of Job title field whe nit exceeds 50 chars for downstrea m impacts.</description>
    <errorConditionFormula>AND
(OR($User.Profile_Name__c =&apos;QL_Qantas_Sales&apos;,$User.Profile_Name__c =&apos;Sales and Distribution-Sales&apos;,$User.Profile_Name__c =&apos;Sales and Distribution-Distribution&apos;,$User.Profile_Name__c =&apos;QL_Sales&apos;),LEN( Job_Title__c ) &gt; 50)</errorConditionFormula>
    <errorDisplayField>Job_Title__c</errorDisplayField>
    <errorMessage>Job Title has exceeded 50 character limit</errorMessage>
</ValidationRule>